# LabTraining

./: .gitignore  CMakeLists.txt  README.md
DEV/: Arisha_ext_Task1.cpp  BubbleSort.cpp  CMakeLists.txt  PrintArray.cpp  floats.cpp  get_dup.cpp  iter2.cpp  iteration_size.cpp  lex1.cpp  nsum.cpp
ForTeacher/: CMakeLists.txt  Composition.cpp  Elevator.cpp  Hex_To_Dec.cpp  Lift.cpp  O_Task3.cpp  Sorting.cpp  SplitAddres.cpp  Sum_Of_Divisors.cpp  char_frequenct.cpp  demo.cpp  struct_print.cpp
ForTeacher/Marks/: CMakeLists.txt  mark.cpp  mark.h  marks.cpp  marks.h
Marks/: demo.csv  marks.csv
OlympicTraining/: Task2.cpp  coins.cpp
PartI/C++/Lesson_10/: HomeWork.txt  a2.cpp  htsolve.cpp
PartI/C++/Lesson_12/: Hex.cpp  Struct_Demo.cpp  Struct_Intro.cpp  hex_to_decimal.cpp
PartI/C++/Lesson_13/: HexConverter.cpp  HomeTask.txt  hw_lettter_frequncy.cpp
PartI/C++/Lesson_14/: HomeTask.txt  Theory.txt  class1.cpp
PartI/C++/Lesson_15/: Dispatcher.cpp  Elevator.cpp  HomeTask.txt
PartI/C++/Lesson_16/: ternary_demo.cpp
PartI/C++/Lesson_17/: HomeTask.txt
PartI/C++/Lesson_3/: Iteration.cpp  Pointers.cpp  floats.cpp
PartI/C++/Lesson_4/: solve_1.cpp  template1.cpp
PartI/C++/Lesson_5/: nsum.cpp
PartI/C++/Lesson_6/: vectors.cpp
PartI/C++/Lesson_7/: Sorting.cpp
PartI/C++/Lesson_8/: demo1.cpp  t1.cpp  t2.cpp
PartI/C++/Lesson_9/: a1.cpp
PartI/Lab_1_1/DEV/: Lab_1_1_Simple.py
PartI/Lab_1_1/PY/: 7numbers.py  Address_Separation.py  Car_Liating.py  Combine_Guests.py  Combine_Lists.py  Count_Letters.py  Counter.py  Digits.py  Error.py  EvenNumbers.py  Factorial.py  File_rename.py  Google_Part1_Week5_final2.py  Google_Part1_Week5_final3.py  Google_Part1_Week5_final5.py  Group_List.py  Guests_List.py  Higlight_Word.py  Is_Palindrom.py  Lab_1_1_Simple.py  Linux_Permissions.py  Multiplies_7.py  Multiplyer_Table.py  Name_Tag.py  Replace_str_end.py  Show_Letter.py  Squares.py  String_Transform.py  Sum_Up.py  Sum_of_Positives.py  Users_Per_Froup.py  Weather.py  cube_numbers.py  email-list.py  find_single.py  is_power_of.py  retry.py  sum_recursion.py  tmp.py
PartI/Lab_1_1/PY/Google_FinalProject_PartI_Module_6/: Event.py  EventHendler.py
PartI/Lab_1_1/PY/Google_FinalProject_PartI_Module_6/Server_Log/: Event.py  EventHendler.py
PartI/Lab_1_1/PY/Google_FinalProject_PartI_Module_6/Word_Cloud/: WC.ipynb  text.txt
PartI/Lab_1_1/PY/Google_Module_6/: Load_Balancing.py  server.py
PartI/Testing/: nums.cpp
